@@ -5367,6 +5367,48 @@ ellanal_globalred(GEN e, GEN *ch)
   return E;
 }
 
+static GEN
+ellQ_tamagawa(GEN e)
+{
+  GEN red = ellglobalred(e);
+  GEN tam = gel(red,3);
+  if (signe(ell_get_disc(e)) > 0) return shifti(tam,1);
+  else return icopy(tam);
+}
+
+static GEN
+ellnf_tamagawa(GEN e)
+{
+  GEN nf  = ellnf_get_nf(e);
+  long r1 = nf_get_r1(nf), r2 = nf_get_r2(nf);
+  GEN red = ellglobalred(e);
+  GEN tam = gel(red,3);
+  long i, v = r2;
+  GEN s = nfsign(nf, ell_get_disc(e));
+  for (i=1; i<=r1; i++)
+    if (s[i] == 0) v++;
+  return shifti(tam, v);
+}
+
+GEN
+elltamagawa(GEN E)
+{
+  pari_sp av = avma;
+  GEN v;
+  checkell(E);
+  switch(ell_get_type(E))
+  {
+    default: pari_err_TYPE("elltamagawa",E);
+    case t_ELL_Q:
+      v = ellQ_tamagawa(E);
+      break;
+    case t_ELL_NF:
+      v = ellnf_tamagawa(E);
+      break;
+  }
+  return gerepileuptoint(av, v);
+}
+
 /********************************************************************/
 /**                                                                **/
 /**           ROOT NUMBER (after Halberstadt at p = 2,3)           **/
