@@ -511,6 +511,10 @@ ecsmall([0, 1]), [Vecsmall([0, 1]), Vecsmall([0]), Vecsmall([0]), Vecsmall([
 -1
 1
 1
+2170814464
+4
+-21952
+6
 x^-2 + Mod(-1/5*x, x^2 + 5)*x^2 + Mod(-1/15, x^2 + 5)*x^6 + Mod(2/975*x, x^2
  + 5)*x^10 + O(x^14)
 x^-1 + Mod(1/15*x, x^2 + 5)*x^3 + Mod(1/105, x^2 + 5)*x^7 + Mod(-2/10725*x, 
@@ -567,4 +571,4 @@ t + 1/3*t^3 - 1/2*t^4 + 14/15*t^5 + O(t^6)
   *** ellformalw: domain error in ellformalw: precision <= 0
 242.47010035195076100129810400142304776
 0
-Total time spent: 564
+Total time spent: 480
