@@ -68,4 +68,14 @@
 539700, a^2 - 17), Mod(-600624098797*a - 2476436600713, a^2 - 17)]
 [Mod(-4*a + 32, a^2 - 17), Mod(-192*a + 972, a^2 - 17), Mod(-2*a + 16, a^2 -
  17), Mod(-6688*a + 29440, a^2 - 17)]
-Total time spent: 716
+2268
+54
+[9, [3, 3], [[-2, Mod(-3*a + 2, a^2 - a + 1)], [0, Mod(-a + 2, a^2 - a + 1)]
+]]
+81
+2
+[3, [3], [[75, Mod(-53*a + 276, a^2 - a - 22)]]]
+89
+4
+[10, [10], [[Mod(a^2, a^3 - a^2 + 1), Mod(-2*a^2 + 1, a^3 - a^2 + 1)]]]
+Total time spent: 592
