@@ -349,6 +349,12 @@ ellrootno(E,2)
 E=ellinit([0,20,0,-352,512]);
 ellrootno(E,2)
 
+E.disc
+elltamagawa(E)
+E=ellinit([1,0,1,4,-6]);
+E.disc
+elltamagawa(E)
+
 E=ellinit([0,0,0,Mod(x,x^2+5),0]);
 ellwp(E)
 ellzeta(E)
